--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ body {
     background-color: #312550;
     justify-content: center;
     border-bottom: 3.5px solid #C1A8FF;
+    user-select: none;
 
 }
 p {
@@ -31,6 +32,7 @@ p {
 .score p {
     font-size: 44px;
     margin: 1rem 0 0 0;
+    user-select: none;
 }
 
 .scores {
@@ -49,6 +51,7 @@ p {
 }
 .ps, .cs {
    margin-left: 35px;
+   user-select: none;
 }
 
 
